--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cla-mobile",
+  "homepage": "https://defineeditor.com/mobileBrowser",
   "version": "0.1.0",
   "private": true,
   "scripts": {
