--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,8 @@
     }
   ],
   "start_url": "https://defineEditor.com/mobileBrowser",
+  "scope": "https://defineEditor.com/mobileBrowser",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#9295a21a"
 }
