--- a/package.json
+++ b/package.json
@@ -78,13 +78,13 @@
     ]
   },
   "devDependencies": {
-    "redux-devtools": "^3.7.0",
     "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-react": "^7.23.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-standard": "^4.1.0"
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-standard": "^4.1.0",
+    "redux-devtools": "^3.7.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -94,7 +94,8 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
-    "cla-wrapper": "^0.3.1",
+    "cla-wrapper": "^0.3.8",
+    "classnames": "^2.3.1",
     "clone": "^2.1.2",
     "idb": "^6.0.0",
     "jszip": "^3.6.0",
