--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,8 +18,8 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "https://defineEditor.com/mobileBrowser",
-  "scope": "https://defineEditor.com/mobileBrowser",
+  "start_url": "https://defineEditor.com/mobileBrowser/",
+  "scope": "https://defineEditor.com/mobileBrowser/",
   "display": "standalone",
   "theme_color": "#DFE0E4",
   "background_color": "#DFE0E4"
